...
                )
            )

            Spacer(modifier = Modifier.height(12.dp))

            DLLTextField(
                label = "Name",
                value = name,
                onValueChange = setName
            )

            Spacer(modifier = Modifier.height(12.dp))

...
                onClick = { onAddUpdateFolder(name, description) },
                enabled = folder?.name != name && name.isNotBlank(),
                modifier = Modifier
                    .align(Alignment.CenterHorizontally)
                    .fillMaxWidth(.6f)
            ) {
                Text(text = "Save")
            }

            Spacer(modifier = Modifier.height(12.dp))
        }
    }

...
