...
            },
        )

        DLLHorizontalDivider()

        DLLListItem(
            title = "Suggestions",
            description = "Enable or disable deeplink suggestions when typing a deeplink",
            trailingContent = {
                ChevronIcon()
            },
        )
    }
...
                DLLTopBarDefaults.Title(text = "DeepLink Launcher")
            },
            actions = {
                DLLIconButton(onClick = {}) {
                    Icon(
                        imageVector = TablerIcons.Settings,
                        contentDescription = "Settings",
                    )
                }
            },
        )
    }
}
...
